# spectral-dfo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  zenodo.json
.github/workflows/: ci.yml
output/: summary.csv
scripts/: plot_results.py  plot_results.sh  run_all.sh  run_benchmark.py  run_benchmark.sh  run_quick_smoke.sh  setup.sh
src/spectral_dfo/: __init__.py  dfbd.py  oracle.py  pdfo_runner.py  plotting.py  problems.py  profiles.py
tests/: test_dfbd.py  test_oracle.py  test_problems.py  test_profiles.py
